--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
     "react-icons": "^4.12.0",
+    "proshop2":"file:..",
     "react-redux": "^8.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.20.0",
