--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "eventure-main": "file:..",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
     "react-icons": "^4.12.0",
-    "proshop2":"file:..",
     "react-redux": "^8.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.20.0",
