--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   backend:
     image: niteshmore/backend-image:latest
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - PORT=5000
       - MONGO_URI=your-mongo-uri
       - JWT_SECRET=your-jwt-secret
