--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,8 @@ version: '3'
 services:
   backend:
     image: niteshmore/backend-image:latest
-    environment:
-      - NODE_ENV=production
-      - PORT=5000
-      - MONGO_URI=your-mongo-uri
-      - JWT_SECRET=your-jwt-secret
-      - PAYPAL_CLIENT_ID=your-paypal-client-id
+    env_file:
+      .env
     ports:
       - "5000:5000"
   frontend:
