--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,16 @@
 services:
   - type: web
     name: backend
-    runtime: image
-    image:
-      url: niteshmore/backend-image:latest
-      creds:
-       fromRegistryCreds:
-       name: niteshmore
+    runtime: docker
+    dockerfilePath: ./Dockerfile
+    envVars:
+      - key: PORT
+        value: 5000
 
   - type: web
     name: frontend
-    runtime: image
-    image:
-      url: niteshmore/frontend-image:latest
-      creds:
-       fromRegistryCreds:
-       name: niteshmore
+    runtime: docker
+    dockerfilePath: ./frontend/Dockerfile
+    envVars:
+      - key: PORT
+        value: 3000
